# SlicerCIP

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  SuperBuild.cmake
Loadable/RegionType/: CMakeLists.txt
Loadable/RegionType/MyRegionType/: CMakeLists.txt  qSlicerMyRegionTypeModule.cxx  qSlicerMyRegionTypeModule.h  qSlicerMyRegionTypeModuleWidget.cxx  qSlicerMyRegionTypeModuleWidget.h
Loadable/RegionType/MyRegionType/Logic/: vtkSlicerMyRegionTypeLogic.cxx  vtkSlicerMyRegionTypeLogic.h
Loadable/RegionType/MyRegionType/MRML/: CMakeLists.txt  vtkMRMLChestRTColorTableNode.cxx  vtkMRMLChestRTColorTableNode.h  vtkMRMLMyRegionTypeDisplayNode.cxx  vtkMRMLMyRegionTypeDisplayNode.h  vtkMRMLMyRegionTypeNode.cxx  vtkMRMLMyRegionTypeNode.h
Loadable/RegionType/MyRegionType/Resources/: qSlicerMyRegionTypeModule.qrc
Loadable/RegionType/MyRegionType/Widgets/: qSlicerMyRegionTypeFooBarWidget.cxx  qSlicerMyRegionTypeFooBarWidget.h
Scripted/: CMakeLists.txt
Scripted/CIP_/: CIP_.py  CMakeLists.txt
Scripted/CIP_/CIP/Testing/: geometryTopologyData.xml  test_geometry_topology_data.py
Scripted/CIP_/CIP/logic/: Attic.py  Colors.py  EventsTrigger.py  SlicerUtil.py  Util.py  __init__.py  file_conventions.py  geometry_topology_data.py  lung_splitter.py  timer.py
Scripted/CIP_/CIP/ui/: AutoUpdateWidget.py  CIP_EditBox.py  CIP_EditorWidget.py  CaseReportsWidget.py  CollapsibleMultilineText.py  MIPViewerWidget.py  PdfReporter.py  PreProcessingWidget.py  __init__.py
Scripted/CIP_AVRatio/: CIP_AVRatio.py  CMakeLists.txt
Scripted/CIP_AVRatio/Resources/: CIP_AVRatioReport.html  CIP_AVRatio_skeleton.css
Scripted/CIP_AdvancedViewer/: CIP_AdvancedViewer.py  CMakeLists.txt
Scripted/CIP_AreaLabeling/: CIP_AreaLabeling.py  __init__.py
Scripted/CIP_AreaLabeling/CIP_AreaLabeling_logic/: StructuresParameters.py  __init__.py  structures.xml
Scripted/CIP_Blank/: CIP_Blank.py
Scripted/CIP_BodyComposition/: CIP_BodyComposition.py  CMakeLists.txt  __init__.py
Scripted/CIP_BodyComposition/CIP_BodyComposition_logic/: BodyCompositionParameters.py  __init__.py
Scripted/CIP_BodyComposition/Resources/: CIP_BodyComposition_ColorMap.ctbl
Scripted/CIP_BodyComposition/Testing/Python/: CMakeLists.txt
Scripted/CIP_BodyComposition/logic/: BodyCompositionParameters.py
Scripted/CIP_CalciumScoring/: CIP_CalciumScoring.py  CMakeLists.txt
Scripted/CIP_Calibration/: CIP_Calibration.py  CMakeLists.txt
Scripted/CIP_Common/: CIP_Common.py  CMakeLists.txt
Scripted/CIP_Common/CIP/Testing/: CMakeLists.txt  geometryTopologyData-sample.xml  test_geometry_topology_data.py
Scripted/CIP_Common/CIP/logic/: BodyCompositionParameters.py  Colors.py  GeometryTopologyData-sample.xml  GeometryTopologyData.py  GeometryTopologyData.xsd  ModuleStore.py  SlicerUtil.py  Util.py  (+8 more)
Scripted/CIP_GetImage/: CIP_GetImage.py  CMakeLists.txt
Scripted/CIP_InteractiveLobeSegmentation/: CIP_InteractiveLobeSegmentation.py  CMakeLists.txt
Scripted/CIP_LesionModel/: CIP_LesionModel.py  CMakeLists.txt
Scripted/CIP_LesionModel/FeatureExtractionLib/: FirstOrderStatistics.py  GeometricalMeasures.py  MorphologyStatistics.py  NodeInformation.py  ParenchymalVolume.py  RenyiDimensions.py  TextureGLCM.py  TextureGLRL.py  __init__.py
Scripted/CIP_LesionModel/FeatureWidgetHelperLib/: FeatureDescriptionLabel.py  FeatureExtractionLogic.py  FeatureWidgets.py  __init__.py
Scripted/CIP_LesionProgress/: CIP_LesionProgress.py  CMakeLists.txt
Scripted/CIP_MIPViewer/: CIP_MIPViewer.py  CMakeLists.txt
Scripted/CIP_PAARatio/: CIP_PAARatio.py  CMakeLists.txt
Scripted/CIP_ParenchymaAnalysis/: CIP_ParenchymaAnalysis.py  CMakeLists.txt
Scripted/CIP_ParenchymaAnalysis/Resources/: CIP_ParenchymaAnalysisReport.html  CIP_ParenchymaAnalysis_skeleton.css  ReportTemplate.html
Scripted/CIP_ParenchymaSubtypeTraining/: CIP_ParenchymaSubtypeTraining.py  CMakeLists.txt  update_previous_files.py
Scripted/CIP_ParenchymaSubtypeTraining/CIP_ParenchymaSubtypeTrainingLogic/: SubtypingParameters.py
Scripted/CIP_ParenchymaSubtypeTraining/Resources/: CIP_ILDClassification_ColorMap.ctbl
Scripted/CIP_ParenchymaSubtypeTraining/Results/: 10002K_INSP_STD_BWH_COPD_parenchymaTraining copy.xml  10002K_INSP_STD_BWH_COPD_parenchymaTraining.xml  10451N_INSP_STD_NJC_COPD_parenchymaTraining.xml  12191X_INSP_STD_COL_COPD_parenchymaTraining.xml  12671L_INSP_STD_TXS_COPD_parenchymaTraining.xml
Scripted/CIP_ParenchymaSubtypeTraining/Scripts/: baseline.py  get_points.py  localize_xml.py  remove_points.py  update_previous_files.py
Scripted/CIP_ParenchymaSubtypeTrainingLabelling/: CIP_ParenchymaSubtypeTrainingLabelling.py  CMakeLists.txt
Scripted/CIP_ParenchymaSubtypeTrainingLabelling/Resources/: structures.xml
Scripted/CIP_ParenchymaSubtypeTrainingWithReslicing/: CIP_ParenchymaSubtypeTrainingWithReslicing.py  CMakeLists.txt
Scripted/CIP_PointsLabelling/: CIP_PointsLabelling.py  CMakeLists.txt
Scripted/CIP_RVLVRatio/: CIP_RVLVRatio.py  CMakeLists.txt
Scripted/CIP_TracheaStentPlanning/: CIP_TracheaStentPlanning.py  CMakeLists.txt  temp.py
Scripted/CIP_TracheaStentPlanningOptimized/: CIP_TracheaStentPlanningOptimized.py  CMakeLists.txt
Scripted/EmphysemaSubtypes/: CMakeLists.txt  EmphysemaSubtypes.py
Scripted/Example/: CMakeLists.txt  Example.py
Scripted/InteractiveLobeSegmentation/: CMakeLists.txt  InteractiveLobeSegmentation.py
Scripted/LungRegistration/: CMakeLists.txt  LungRegistration.py
Scripted/ParenchymaAnalysis/: CMakeLists.txt  ParenchymaAnalysis.py
Scripted/PectoralisSegmentation/: CMakeLists.txt  PectoralisSegmentation.py
Scripted/PicasaSnap/: CMakeLists.txt  PicasaSnap.py
Scripted/VolumeProbe/: CMakeLists.txt  VolumeProbe.py
Scripted/attic/: LoadSaveDataWidget.py
Scripted/attic/CIP_GetImage/: CIP_GetImage.py
Scripted/attic/EmphysemaSubtypes/: EmphysemaSubtypes.py
Scripted/attic/LungRegistration/: LungRegistration.py
Scripted/attic/ParenchymaAnalysis/: ParenchymaAnalysis.py
Scripted/attic/PectoralisSegmentation/: CMakeLists.txt  PectoralisSegmentation.py
Scripted/attic/PicasaSnap/: PicasaSnap.py
(+125 files in other folders)
